--- a/login/src/app/pages/sidebar/sidebar.component.css
+++ b/login/src/app/pages/sidebar/sidebar.component.css
@@ -80,7 +80,7 @@
   margin-right: 10px;
 }
 .profile-card {
-  background: #eeeded;
+  /* background: #eeeded; */
   border-radius: 8px;
   text-align: left;
 }
