--- a/login/src/app/pages/header/header.component.html
+++ b/login/src/app/pages/header/header.component.html
@@ -8,7 +8,10 @@
   <!-- Profile Section -->
   <div class="flex align-items-center gap-3">
       <i class="pi pi-user"></i>
-    <span class="font-medium">Cedar Financial</span>
-    <span class="font-normal">Anum Shafique</span>
+    <span class="font-medium fs-6">Cedar Financial</span>
+    <span class="font-normal fs-6">Anum Shafique</span>
+    <!-- Example: header.component.html -->
+<button pButton type="button" label="Logout" (click)="logout()" class="btn btn-danger py-1 small fs-6">Logout</button>
+
   </div>
 </div>
