--- a/login/src/app/pages/home-page/home-page.component.html
+++ b/login/src/app/pages/home-page/home-page.component.html
@@ -1,50 +1,77 @@
-<div class="p-4 shadow-sm bg-white rounded py-8">
-  <div class="flex justify-content-between align-items-center mb-3">
-    <button pButton label="+ Add New" class="p-button-info py-1 rounded ml-auto mr-3" (click)="addNewRow()"></button>
+<div class="p-4 shadow-sm bg-white rounded">
+  <div class="d-flex justify-content-end mb-3">
+    <button pButton label="+ Add New" class="btn btn-primary rounde" (click)="openNew()"></button>
   </div>
 
-  <table class="w-full shadow-1">
-    <thead>
+  <p-table [value]="products" class="w-full">
+    <ng-template pTemplate="header">
       <tr>
-        <th class="p-2">Name</th>
-        <th class="p-2">Last Name</th>
-        <th class="p-2">Website</th>
-        <th class="p-2 text-center">Address</th>
-        <th class="p-2 text-center">Actions</th>
+        <th>Name</th>
+        <th>Last Name</th>
+        <th>Website</th>
+        <th>Phones</th>
+        <th>Actions</th>
       </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of products; let i = index" class="border-bottom-1 surface-border">
-        <!-- Name -->
-        <td class="p-2">
-          <input *ngIf="item.isEditing" [(ngModel)]="item.name" pInputText class="w-full form-control" />
-          <span *ngIf="!item.isEditing">{{ item.name }}</span>
+    </ng-template>
+    <ng-template pTemplate="body" let-product let-i="rowIndex">
+      <tr>
+        <td>{{ product.name }}</td>
+        <td>{{ product.lastName }}</td>
+        <td>{{ product.website }}</td>
+        <td>
+          <ul class="m-0 p-0">
+            <li *ngFor="let phone of product.phones">{{ phone.number }}</li>
+          </ul>
         </td>
-
-        <!-- Last Name -->
-        <td class="p-2">
-          <input *ngIf="item.isEditing" [(ngModel)]="item.lastName" pInputText class="w-full form-control" />
-          <span *ngIf="!item.isEditing">{{ item.lastName }}</span>
-        </td>
-
-        <!-- Website -->
-        <td class="p-2">
-          <input *ngIf="item.isEditing" [(ngModel)]="item.website" pInputText class="w-full form-control" />
-          <span *ngIf="!item.isEditing">{{ item.website }}</span>
-        </td>
-
-        <!-- Address -->
-        <td class="p-2 text-center">
-          <input *ngIf="item.isEditing" [(ngModel)]="item.address" pInputText class="w-full form-control mb-1" />
-          <span *ngIf="!item.isEditing">{{ item.address }}</span>
-        </td>
-        <td class="p-2 text-center">
-                    <div class="mt-1">
-            <button *ngIf="item.isEditing" pButton label="Save" class="p-button-success p-button-sm mr-2 mx-2 rounded py-1" (click)="saveRow(i)"></button>
-            <button *ngIf="!item.isEditing" pButton label="Edit" class="p-button-light p-button-sm mx-2 rounded py-1" (click)="editRow(i)"></button>
-          </div>
+        <td>
+          <button  icon="pi pi-pencil" class="btn btn-primary rounded mr-2 small" (click)="editProduct(product, i)">Edit</button>
+          <button icon="pi pi-trash" class="btn btn-primary rounded small" (click)="deleteProduct(i)">Delete</button>
         </td>
       </tr>
-    </tbody>
-  </table>
+    </ng-template>
+  </p-table>
 </div>
+
+<!-- Dialog -->
+<p-dialog header="Product Details" [(visible)]="productDialog" [modal]="true" [style]="{width:'450px'}">
+  <form [formGroup]="productForm" (ngSubmit)="saveProduct()">
+    <div class="p-fluid">
+      <div class="p-field">
+        <label>Name</label>
+        <input type="text" pInputText formControlName="name"
+               [ngClass]="{'is-invalid': productForm.get('name')?.invalid && productForm.get('name')?.touched}"/>
+        <small class="text-danger" *ngIf="productForm.get('name')?.invalid && productForm.get('name')?.touched">Name is required</small>
+      </div>
+
+      <div class="p-field">
+        <label>Last Name</label>
+        <input type="text" pInputText formControlName="lastName"
+               [ngClass]="{'is-invalid': productForm.get('lastName')?.invalid && productForm.get('lastName')?.touched}"/>
+        <small class="text-danger" *ngIf="productForm.get('lastName')?.invalid && productForm.get('lastName')?.touched">Last Name is required</small>
+      </div>
+
+      <div class="p-field">
+        <label>Website</label>
+        <input type="text" pInputText formControlName="website"
+               [ngClass]="{'is-invalid': productForm.get('website')?.invalid && productForm.get('website')?.touched}"/>
+        <small class="text-danger" *ngIf="productForm.get('website')?.invalid && productForm.get('website')?.touched">Enter a valid website (http/https)</small>
+      </div>
+
+      <!-- Phones -->
+      <div formArrayName="phones" class="mb-2">
+        <label class="py-2"> Phone</label>
+        <div *ngFor="let phone of phones.controls; let i = index" [formGroupName]="i" class="d-flex align-items-center mb-2">
+          <input type="text" pInputText formControlName="number" placeholder="Phone number" class="flex-grow-1"
+                 [ngClass]="{'is-invalid': phone.get('number')?.invalid && phone.get('number')?.touched}"/>
+          <button *ngIf="phones.length > 1" type="button" pButton icon="pi pi-minus" class="p-button-danger ml-2" (click)="removePhone(i)"></button>
+        </div>
+        <button type="button" label="Add Phone" class="btn btn-primary mt-2" (click)="addPhone()">+ Add phone</button>
+      </div>
+
+      <div class="d-flex justify-content-end mt-3">
+        <button type="submit" pButton label="Save" class="btn btn-success mr-2"></button>
+        <button type="button" pButton label="Cancel" class="btn btn-primary" (click)="productDialog=false"></button>
+      </div>
+    </div>
+  </form>
+</p-dialog>
