--- a/login/src/app/pages/home-page/home-page.component.html
+++ b/login/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
+
+<p-toast position="top-right"></p-toast>
 <div class="p-4 shadow-sm bg-white rounded">
   <div class="d-flex justify-content-end mb-3">
     <button pButton label="+ Add New" class="btn btn-primary rounde" (click)="openNew()"></button>
@@ -39,21 +41,21 @@
       <div class="p-field">
         <label>Name</label>
         <input type="text" pInputText formControlName="name"
-               [ngClass]="{'is-invalid': productForm.get('name')?.invalid && productForm.get('name')?.touched}"/>
+               />
         <small class="text-danger" *ngIf="productForm.get('name')?.invalid && productForm.get('name')?.touched">Name is required</small>
       </div>
 
       <div class="p-field">
         <label>Last Name</label>
         <input type="text" pInputText formControlName="lastName"
-               [ngClass]="{'is-invalid': productForm.get('lastName')?.invalid && productForm.get('lastName')?.touched}"/>
+               />
         <small class="text-danger" *ngIf="productForm.get('lastName')?.invalid && productForm.get('lastName')?.touched">Last Name is required</small>
       </div>
 
       <div class="p-field">
         <label>Website</label>
         <input type="text" pInputText formControlName="website"
-               [ngClass]="{'is-invalid': productForm.get('website')?.invalid && productForm.get('website')?.touched}"/>
+               />
         <small class="text-danger" *ngIf="productForm.get('website')?.invalid && productForm.get('website')?.touched">Enter a valid website (http/https)</small>
       </div>
 
@@ -62,7 +64,7 @@
         <label class="py-2"> Phone</label>
         <div *ngFor="let phone of phones.controls; let i = index" [formGroupName]="i" class="d-flex align-items-center mb-2">
           <input type="text" pInputText formControlName="number" placeholder="Phone number" class="flex-grow-1"
-                 [ngClass]="{'is-invalid': phone.get('number')?.invalid && phone.get('number')?.touched}"/>
+                 />
           <button *ngIf="phones.length > 1" type="button" pButton icon="pi pi-minus" class="p-button-danger ml-2" (click)="removePhone(i)"></button>
         </div>
         <button type="button" label="Add Phone" class="btn btn-primary mt-2" (click)="addPhone()">+ Add phone</button>
