--- a/login/src/app/pages/login/login.component.html
+++ b/login/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+
+<p-toast position="top-right"></p-toast>
 <div class="grid min-h-screen surface-ground mt-5">
 
   <!-- Left Section (Welcome message) -->
@@ -40,7 +42,7 @@
       </small>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-2" [disabled]="LoginForm.invalid">Login</button>
+    <button type="submit" class="btn btn-primary mt-2">Login</button>
   </form>
 </div>
 
@@ -72,17 +74,11 @@
       <div class="field mb-3 col-6">
         <label for="country">Country</label>
         <p-dropdown [options]="countries" formControlName="country" placeholder="Select a Country" optionLabel="name"></p-dropdown>
-        <small class="text-danger" *ngIf="signupForm.get('country')?.touched && signupForm.get('country')?.invalid">
-          Country is required.
-        </small>
       </div>
 
       <div class="field mb-3 col-6">
         <label for="businessClass">Business Class</label>
         <input id="businessClass" type="text" pInputText formControlName="businessClass" />
-        <small class="text-danger" *ngIf="signupForm.get('businessClass')?.touched && signupForm.get('businessClass')?.invalid">
-          Business Class is required.
-        </small>
       </div>
     </div>
 
@@ -105,7 +101,7 @@
       </div>
     </div>
 
-<button type="submit" class="btn btn-primary mt-2" [disabled]="signupForm.invalid">Sign up</button>
+<button type="submit" class="btn btn-primary mt-2">Sign up</button>
 
     <p class="text-center mt-3">
       Already have an account?
