--- a/login/src/app/pages/header/header.component.html
+++ b/login/src/app/pages/header/header.component.html
@@ -10,6 +10,10 @@
       <i class="pi pi-user"></i>
     <span class="font-medium fs-6">Cedar Financial</span>
     <span class="font-normal fs-6">Anum Shafique</span>
+    
+    <a routerLink="/interceptors" class="text-decoration-none fs-6 font-medium">
+  Resolvers
+</a>
     <!-- Example: header.component.html -->
 <button pButton type="button" label="Logout" (click)="logout()" class="btn btn-danger py-1 small fs-6">Logout</button>
 
