--- a/login/src/app/pages/header/header.component.html
+++ b/login/src/app/pages/header/header.component.html
@@ -14,6 +14,12 @@
     <a routerLink="/interceptors" class="text-decoration-none fs-6 font-medium">
   Resolvers
 </a>
+    <a routerLink="/resolver" class="text-decoration-none fs-6 font-medium">
+  Resolvers-1
+</a>
+    <a routerLink="/token" class="text-decoration-none fs-6 font-medium">
+ Token
+</a>
     <!-- Example: header.component.html -->
 <button pButton type="button" label="Logout" (click)="logout()" class="btn btn-danger py-1 small fs-6">Logout</button>
 
